Adding phase 2 code changes and tests, and removing class files accidentally merged up.